--- a/Platforms/WindowsDX/WindowsDX.csproj
+++ b/Platforms/WindowsDX/WindowsDX.csproj
@@ -14,6 +14,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Apos.Camera" Version="0.3.2" />
+    <PackageReference Include="Apos.Shapes" Version="0.3.0" />
+    <PackageReference Include="Apos.Tweens" Version="0.1.4" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.2.1105" />
     <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.8.2.1105" />
     <PackageReference Include="Apos.Input" Version="2.4.2" />
