--- a/Platforms/DesktopGL/DesktopGL.csproj
+++ b/Platforms/DesktopGL/DesktopGL.csproj
@@ -14,12 +14,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Apos.Camera" Version="0.3.2" />
     <PackageReference Include="Apos.Shapes" Version="0.3.0" />
     <PackageReference Include="Apos.Tweens" Version="0.1.4" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.2.1105" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.2.1105" />
     <PackageReference Include="Apos.Input" Version="2.4.2" />
+    <PackageReference Include="MonoGame.Extended" Version="4.0.3" />
+    <PackageReference Include="FontStashSharp.MonoGame" Version="1.2.8" />
   </ItemGroup>
 
   <ItemGroup>
